--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,44 @@ Navbar
 ===============
 */
 
+.nav {
+  height: 5rem;
+  padding: 1rem;
+  display: grid;
+  align-items: center;
+  transition: var(--transition);
+}
+
+.nav-links {
+  display: none;
+}
+
+/* .nav {
+  background: pink;
+} */
+
+.nav-center {
+  width: 100%;
+  max-width: 73rem;
+  margin: 0 auto;
+}
+
+.nav-header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.nav-btn {
+  background: transparent;
+  border-color: transparent;
+  color: var(--clr-primary-5);
+  font-size: 2rem;
+  cursor: pointer;
+  display: grid;
+  justify-self: end;
+}
+
 /*
 =============== 
 Sidebar
