--- a/css/styles.css
+++ b/css/styles.css
@@ -192,10 +192,6 @@ Navbar
   display: none;
 }
 
-/* .nav {
-  background: pink;
-} */
-
 .nav-center {
   width: 100%;
   max-width: 73rem;
@@ -223,13 +219,18 @@ Navbar
     display: none;
   }
 
+  .nav-logo {
+    margin-top: 1.5rem;
+    margin-left: 2rem;
+  }
+
   .nav-links {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     align-items: center;
     justify-self: end;
     column-gap: 2rem;
-    padding-right: 2rem;
+    margin-top: 2rem;
   }
 
   .nav-center {
@@ -376,6 +377,34 @@ Hero
 
 .hero-btn {
   margin-top: 1.25rem;
+}
+
+@media screen and (min-width: 62rem) {
+  .hero-img {
+    display: block;
+  }
+
+  .hero-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .hero-photo {
+    max-width: 25rem;
+    max-height: 30rem;
+    object-fit: cover;
+    border-radius: var(--radius);
+  }
+
+  .hero-img::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 2rem;
+    right: -2rem;
+    border: 0.25rem solid var(--clr-primary-5);
+  }
 }
 
 /*
