--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ Variables
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   --max-width: 1170px;
 }
+
 /*
 =============== 
 Global Styles
@@ -443,7 +444,48 @@ Services
 */
 /* small screen layout setup */
 /* bg-grey in globals */
+.bg-grey {
+  background: var(--clr-grey-10);
+}
 
+.service {
+  background: var(--clr-white);
+  padding: 3rem 1.5rem;
+  margin-bottom: 2rem;
+  border-radius: var(--radius);
+  text-align: center;
+  transition: var(--transition);
+}
+
+.service-icon {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.service .underline {
+  width: 3rem;
+  height: 0.12rem;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  transition: var(--transition);
+}
+
+.service p {
+  transition: var(--transition);
+}
+
+.service:hover {
+  background: var(--clr-primary-5);
+  color: var(--clr-white);
+}
+
+.service:hover p {
+  color: var(--clr-white);
+}
+
+.service:hover .underline {
+  background: var(--clr-white);
+}
 /*
 =============== 
 Projects
