Services CSS for large screen done

--- a/css/styles.css
+++ b/css/styles.css
@@ -486,6 +486,25 @@ Services
 .service:hover .underline {
   background: var(--clr-white);
 }
+
+@media screen and (min-width: 48rem) {
+  .services-center {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 2rem;
+  }
+}
+
+@media screen and (min-width: 62rem) {
+  .services-center {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.bg-grey .section-title .underline {
+  margin: 0 auto;
+}
+
 /*
 =============== 
 Projects
